--- a/WebContent/acessonegado.xhtml
+++ b/WebContent/acessonegado.xhtml
@@ -40,7 +40,7 @@
 					<h1>Acesso Negado</h1>
 					<p>Você não possui permissão para isso.</p>
 				</div>
-				<p:commandButton value="Voltar" action="#" />
+				<p:commandButton value="Voltar" onclick='window.history.back();' />
 			</div>
 
 		</div>
