--- a/WebContent/pages/cidade.xhtml
+++ b/WebContent/pages/cidade.xhtml
@@ -10,7 +10,7 @@
 			<p:panel id="panel">
 				<f:facet name="header">
 					<div align="center">
-						<h1>Cadastro de Estado</h1>
+						<h1>Cadastro de Cidade</h1>
 					</div>
 				</f:facet>
 				<div class="ui-g ui-fluid">
@@ -50,7 +50,7 @@
 						</div>
 					</div>
 				</div>
-				<p:toolbar>
+				<p:toolbar style="background-color: transparent; border: 0;">
 					<f:facet name="left">
 						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
 							update="@form" action="#{cityController.save}" />
