--- a/WebContent/pages/cliente_fisico.xhtml
+++ b/WebContent/pages/cliente_fisico.xhtml
@@ -128,41 +128,12 @@
 
 							<div class="p-field p-col-12 p-md-1">
 								<p:inputText id="itAreaCode"
-									value="#{physicalClientController.phone.areaCode}" />
+									value="#{physicalClientController.entity.phone.areaCode}" />
 							</div>
 
 							<div class="p-field p-col-12 p-md-9">
 								<p:inputText id="itPhoneNumber"
-									value="#{physicalClientController.phone.number}" />
-							</div>
-
-							<div class="p-field p-col-12 p-md-1">
-								<p:commandButton icon="pi pi-save"
-									update="itAreaCode itPhoneNumber dtPhones"
-									actionListener="#{physicalClientController.savePhone()}">
-								</p:commandButton>
-							</div>
-
-							<div class="p-field p-col-12 p-md-12">
-								<p:dataTable id="dtPhones" var="entity"
-									value="#{physicalClientController.entity.phones}">
-									<p:column headerText="Código de Área">
-										<h:outputLabel value="( #{entity.areaCode} )" />
-									</p:column>
-									<p:column headerText="Número">
-										<h:outputLabel value="#{entity.number}" />
-									</p:column>
-									<p:column headerText="Ação">
-										<p:commandButton icon="pi pi-pencil" process="@this"
-											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
-											actionListener="#{physicalClientController.editPhone(entity)}">
-										</p:commandButton>
-										<p:commandButton icon="pi pi-trash" process="@this"
-											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
-											actionListener="#{physicalClientController.removePhone(entity)}">
-										</p:commandButton>
-									</p:column>
-								</p:dataTable>
+									value="#{physicalClientController.entity.phone.number}" />
 							</div>
 
 							<div class="p-field p-col-12 p-md-12">
@@ -233,7 +204,7 @@
 								<h:panelGrid columns="2" columnClasses="label, value">
 									<h:outputText value="Telefones cadastrados: " />
 									<h:outputText
-										value="#{physicalClientController.entity.phones.size()}" />
+										value="(#{physicalClientController.entity.phone.areaCode}) #{physicalClientController.entity.phone.number}" />
 
 									<h:outputText value="Email: *" />
 									<h:outputText  id="itEmail"
