--- a/WebContent/pages/pais.xhtml
+++ b/WebContent/pages/pais.xhtml
@@ -105,7 +105,8 @@
 						</div>
 					</div>
 				</div>
-				<p:toolbar>
+				
+				<p:toolbar style="background-color: transparent; border: 0;">
 					<f:facet name="left">
 						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
 							update="@form" action="#{countryController.save}" />
