--- a/WebContent/pages/listener/carrinho_lista.xhtml
+++ b/WebContent/pages/listener/carrinho_lista.xhtml
@@ -11,13 +11,17 @@
 
 <h:body>
 
-	<p:ajaxStatus onstart="PF('statusDialog').show()"
-		onsuccess="PF('statusDialog').hide()" />
+	<div class="layout-content">
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
 
-	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-		closable="false" resizable="false" showHeader="false">
-		<p:graphicImage name="/images/loading.gif" />
-	</p:dialog>
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false"
+			position="center center">
+			<p:graphicImage name="layout/images/loading.gif" />
+		</p:dialog>
+		<ui:insert name="content" />
+	</div>
 
 	<h:form>
 		<p:growl id="growl" globalOnly="false" />
