--- a/WebContent/pages/listener/cidade_lista.xhtml
+++ b/WebContent/pages/listener/cidade_lista.xhtml
@@ -6,18 +6,22 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Consulta de País</title>
+	<title>Consulta de Cidades</title>
 </h:head>
 
 <h:body>
 
-	<p:ajaxStatus onstart="PF('statusDialog').show()"
-		onsuccess="PF('statusDialog').hide()" />
+	<div class="layout-content">
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
 
-	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-		closable="false" resizable="false" showHeader="false">
-		<p:graphicImage name="/images/loading.gif" />
-	</p:dialog>
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false"
+			position="center center">
+			<p:graphicImage name="layout/images/loading.gif" />
+		</p:dialog>
+		<ui:insert name="content" />
+	</div>
 
 	<h:form>
 		<p:growl id="growl" globalOnly="false" />
@@ -28,10 +32,10 @@
 						<div class="ui-g-12">
 							<div class="card card-w-title">
 								<div class="ui-inputgroup">
-									<p:inputText id="itSearch" value="#{countryListener.search}"
-										placeholder="Informe o nome do país ..." />
+									<p:inputText id="itSearch" value="#{cityListener.search}"
+										placeholder="Informe o nome da cidade ..." />
 									<p:commandButton value="Pesquisar"
-										actionListener="#{countryListener.search}"
+										actionListener="#{cityListener.search}"
 										process="@this itSearch" update="dtList" />
 								</div>
 							</div>
@@ -46,23 +50,23 @@
 					<div class="card card-w-title">
 
 						<p:dataTable id="dtList" var="entity" rowIndexVar="row"
-							paginator="false" reflow="true" value="#{countryListener.list}">
+							paginator="false" reflow="true" value="#{cityListener.list}">
 							<p:column headerText="Nome">
 								<p:commandLink value="#{entity.name}"
-									action="#{countryListener.select(entity.id)}" process="@this"
+									action="#{cityListener.select(entity.id)}" process="@this"
 									update="@form" resetValues="true" />
 							</p:column>
 
 							<p:column headerText="Abreviação">
 								<h:outputText value="#{entity.abbreviation}" />
 							</p:column>
-							
-							<p:column headerText="Capital">
-								<h:outputText value="#{entity.capital.name} - #{entity.capital.state.abbreviation}" />
+
+							<p:column headerText="Estado">
+								<h:outputText value="#{entity.state.name}" />
 							</p:column>
 
 							<f:facet name="footer">
-							        Total de #{countryListener.list.size()} países.
+							        Total de #{cityListener.list.size()} cidades.
 							    </f:facet>
 						</p:dataTable>
 					</div>
