--- a/WebContent/pages/listener/produto_lista.xhtml
+++ b/WebContent/pages/listener/produto_lista.xhtml
@@ -6,18 +6,22 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Consulta de Cliente</title>
+	<title>Consulta de Produto</title>
 </h:head>
 
 <h:body>
 
-	<p:ajaxStatus onstart="PF('statusDialog').show()"
-		onsuccess="PF('statusDialog').hide()" />
+	<div class="layout-content">
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
 
-	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-		closable="false" resizable="false" showHeader="false">
-		<p:graphicImage name="/images/loading.gif" />
-	</p:dialog>
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false"
+			position="center center">
+			<p:graphicImage name="layout/images/loading.gif" />
+		</p:dialog>
+		<ui:insert name="content" />
+	</div>
 
 	<h:form>
 		<p:growl id="growl" globalOnly="false" />
@@ -28,10 +32,10 @@
 						<div class="ui-g-12">
 							<div class="card card-w-title">
 								<div class="ui-inputgroup">
-									<p:inputText id="itSearch" value="#{clientListener.search}"
-										placeholder="Informe o nome do cliente ..." />
+									<p:inputText id="itSearch" value="#{productListener.search}"
+										placeholder="Informe o nome do produto ..." />
 									<p:commandButton value="Pesquisar"
-										actionListener="#{clientListener.search}"
+										actionListener="#{productListener.search}"
 										process="@this itSearch" update="dtList" />
 								</div>
 							</div>
@@ -46,27 +50,31 @@
 					<div class="card card-w-title">
 
 						<p:dataTable id="dtList" var="entity" rowIndexVar="row"
-							paginator="false" reflow="true" value="#{clientListener.list}">
+							paginator="false" reflow="true" value="#{productListener.list}">
 							<p:column headerText="Nome">
 								<p:commandLink value="#{entity.name}"
-									action="#{clientListener.select(entity.id)}" process="@this"
+									action="#{productListener.select(entity.id)}" process="@this"
 									update="@form" resetValues="true" />
 							</p:column>
 
-							<p:column headerText="Email">
-								<h:outputText value="#{entity.user.email}" />
+							<p:column headerText="Valor">
+								<h:outputText value="R$ #{entity.value}" />
 							</p:column>
 
-							<p:column headerText="Data de Nascimento">
-								<h:outputLabel value="#{entity.birthDate}" />
+							<p:column headerText="Data de Validade">
+								<h:outputText value="#{entity.shelfLife}" />
 							</p:column>
 
-							<p:column headerText="Tipo">
+							<p:column headerText="Quantidade Disponível">
+								<h:outputLabel value="#{entity.availableQuantity}" />
+							</p:column>
+
+							<p:column headerText="Tipo de produto">
 								<h:outputLabel value="#{entity.type}" />
 							</p:column>
 
 							<f:facet name="footer">
-							        Total de #{clientListener.list.size()} clientes.
+							        Total de #{productListener.list.size()} produtos.
 							    </f:facet>
 						</p:dataTable>
 					</div>
